--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
 
+    implementation 'org.greenrobot:eventbus:3.3.1'
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.core:core-ktx:1.7.0'
