--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         <service android:name=".service.TimerService" />
 
         <receiver android:name=".receiver.HideTimerReceiver" />
+        <receiver android:name=".receiver.RestartTimerReceiver" />
+
     </application>
 
 </manifest>
